plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'maven-publish' // 添加 Maven Publish 插件
}


group = 'com.suven.framework'
//// 使用SNAPSHOT版本，允许重新部署
 version = '0.1.10-releases'
//version = '0.0.7-SNAPSHOT'
def name = 'future-framework'
def mavenUrl = project.findProperty('mavenUrl') ?: "http://192.168.3.100:9091/nexus"
def nexusUsername = project.findProperty('nexusUsername') ?: System.getenv('NEXUS_USERNAME') ?: 'admin'
def nexusPassword = project.findProperty('nexusPassword') ?: System.getenv('NEXUS_PASSWORD') ?: 'suven123'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
// 禁用 bootJar 任务，因为这是一个多模块项目的根项目
bootJar {
    enabled = false
}

// 启用 jar 任务，生成普通的 JAR 文件
jar {
    enabled = true
    manifest {
        attributes(
                'Implementation-Title': project.name,
                'Implementation-Version': project.version
        )
    }
}


// 配置所有项目的发布任务
// 确保所有项目（包括根项目和子项目）都使用相同的仓库配置和版本号
allprojects {
    // 确保所有项目使用相同的 group 和 version
    group = rootProject.group
    version = rootProject.version

    repositories {
        maven { url "${mavenUrl}/repository/maven-public/"
            allowInsecureProtocol = true // 显式允许不安全协议
        }
        mavenCentral()
    }
    // 为所有项目添加详细的构建日志输出
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'

        // 打印编译信息
        doFirst {
            println "Compiling  with Java -------"
        }
    }

    // 为所有项目添加测试日志输出
    tasks.withType(Test) {
        testLogging {
            events "passed", "skipped", "failed", "standardOut", "standardError"
            exceptionFormat "full"
            showStandardStreams = true
        }
    }
    afterEvaluate { project ->
        if (project != rootProject && project.plugins.hasPlugin('java')) {
            // 应用 Maven Publish 插件
            project.apply plugin: 'maven-publish'

            // 配置发布
            project.publishing {
                publications {
                    mavenJava(MavenPublication) {
                        from project.components.java

                        // 修改版本号，去掉SNAPSHOT后缀中的时间戳和构建号
                        version = project.version.toString().replace('-SNAPSHOT', '')

                        // 添加 POM 信息
                        pom {
                            name = project.name
                            description = "Future Framework - ${project.name}"
                            url = 'https://github.com/yourusername/future-framework'
                            licenses {
                                license {
                                    name = 'The Apache License, Version 2.0'
                                    url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                                }
                            }
                            developers {
                                developer {
                                    id = 'suven'
                                    name = 'Suven'
                                    email = 'your.email@example.com'
                                }
                            }
                        }
                    }
                }

                repositories {
                    maven {
                        // 由于我们去掉了SNAPSHOT后缀，所以始终使用releases仓库
                        def repoUrl = "${mavenUrl}/repository/maven-releases/"
                        url = repoUrl

                        credentials {
                            username = nexusUsername
                            password = nexusPassword
                        }

                        allowInsecureProtocol = true // 显式允许不安全协议

                        // 添加更多日志输出以便调试
                        println "Publishing to: ${url}"
                        println "Using credentials: ${nexusUsername}:${nexusPassword.take(2)}***"

                        // 添加额外的配置选项
                        authentication {
                            basic(BasicAuthentication)
                        }
                    }
                }
            }
        }
    }

    jar {
        exclude 'logback.xml'
        exclude 'META-INF/cat'
        exclude '*.tpl'
        exclude '*.properties'
    }
    configurations {
        // 定义 provided 配置
        provided
        // 使用 implementation 替代已弃用的 compile
        implementation.extendsFrom provided

        all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
        all*.exclude group: 'commons-logging', module: 'commons-logging'
        all*.exclude group: 'log4j', module: 'log4j'
        all*.exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
        all*.exclude group: 'org.eclipse.sisu', module: 'org.eclipse.sisu.plexus'
        all*.exclude group: 'org.eclipse.sisu', module: 'org.eclipse.sisu.inject'
        all*.exclude group: 'com.google.collections', module: 'google-collections'
        all*.exclude group: 'com.codahale.metrics', module: 'metrics'
        all*.exclude group: 'org.sonatype.gossip', module: 'gossip'
        all*.exclude group: 'org.codehaus.groovy', module: 'groovy-all'
        all*.exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed'
        all*.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
        all*.exclude group: 'com.intellij', module: 'openapi'
    }
}
ext {
    set('springCloudVersion', "2025.0.0")
    set('springModulithVersion', "1.4.1")
}

dependencies {
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'

}


// 添加构建信息打印任务
tasks.register('buildInfo') {
    doLast {
        println "=============================================="
        println "Project: ${project.name}"
        println "Version: ${project.version}"
        println "Java Version: ${java.toolchain.languageVersion.get()}"
        println "nexus name: ${nexusUsername}"
        println "nexus password: ${nexusPassword}"
        println "Spring Boot Version: 3.1.5"
        println "Spring Cloud Version: ${springCloudVersion}"
        println "=============================================="
    }
}

// 在构建前打印构建信息
tasks.named('build').configure {
    dependsOn buildInfo
}

// 确保所有子项目在根项目之前被评估
subprojects.each { subproject ->
    evaluationDependsOn(subproject.path)
}

// 添加发布到 Nexus 的任务
tasks.register('publishToNexus') {
    group = 'publishing'
    description = 'Publishes all Maven publications to Nexus repository'

    // 确保所有子项目的发布任务都被依赖
    subprojects.each { subproject ->
        if (subproject.plugins.hasPlugin('maven-publish')) {
            subproject.tasks.withType(org.gradle.api.publish.maven.tasks.PublishToMavenRepository).each { publishTask ->
                dependsOn(publishTask)
                println "Added dependency on ${subproject.name}:${publishTask.name}"
            }
        }
    }

    // 也依赖根项目的发布任务
    if (rootProject.plugins.hasPlugin('maven-publish')) {
        rootProject.tasks.withType(org.gradle.api.publish.maven.tasks.PublishToMavenRepository).each { publishTask ->
            dependsOn(publishTask)
            println "Added dependency on ${rootProject.name}:${publishTask.name}"
        }
    }

    doFirst {
        println "=============================================="
        println "Starting to publish all projects to Nexus"
        println "Nexus URL: ${mavenUrl}"
        println "Using credentials: ${nexusUsername}"
        println "=============================================="
    }

    doLast {
        println "=============================================="
        println "Publishing completed for ${rootProject.name}:${rootProject.version}"
        println "All artifacts have been published to Nexus"
        println "=============================================="
    }
}

// 添加一个任务来发布单个项目
tasks.register('publishSingleProject') {
    group = 'publishing'
    description = 'Publishes a single project to Nexus repository. Usage: ./gradlew publishSingleProject -PprojectPath=:subproject'

    doLast {
        def projectPath = project.findProperty('projectPath')
        if (!projectPath) {
            throw new GradleException("Please specify a project path with -PprojectPath=:subproject")
        }

        def proj = project(projectPath)
        if (!proj.plugins.hasPlugin('maven-publish')) {
            throw new GradleException("Project ${projectPath} does not have the maven-publish plugin applied")
        }

        println "=============================================="
        println "Publishing ${proj.name}:${proj.version} to Nexus"
        println "Nexus URL: ${mavenUrl}"
        println "=============================================="

        proj.tasks.withType(PublishToMavenRepository).forEach { task ->
            task.execute()
        }

        println "=============================================="
        println "Publishing completed for ${proj.name}"
        println "=============================================="
    }
}

